# rustlings-course

./: .gitignore  Cargo.toml  LICENSE  README.md  change-notes.txt  course-info.yaml  course-remote-info.yaml
.cargo/: config.toml
.coursecreator/Rustlings/: course.json
Common Collections/: section-info.yaml  section-remote-info.yaml
Common Collections/Hashmaps/: lesson-info.yaml  lesson-remote-info.yaml
Common Collections/Options/: lesson-info.yaml  lesson-remote-info.yaml
Common Collections/String Test/: lesson-info.yaml  lesson-remote-info.yaml
Common Collections/Strings/: lesson-info.yaml  lesson-remote-info.yaml
Common Collections/Test 3/: lesson-info.yaml
Common Collections/Vectors/: lesson-info.yaml  lesson-remote-info.yaml
Common Programming Concepts/: section-info.yaml  section-remote-info.yaml
Common Programming Concepts/Basic Data Types/: lesson-info.yaml  lesson-remote-info.yaml
Common Programming Concepts/Conditions/: lesson-info.yaml  lesson-remote-info.yaml
Common Programming Concepts/Data Types/: lesson-info.yaml  lesson-remote-info.yaml
Common Programming Concepts/Functions/: lesson-info.yaml  lesson-remote-info.yaml
Common Programming Concepts/If/: lesson-info.yaml  lesson-remote-info.yaml
Common Programming Concepts/Repetitions/: lesson-info.yaml  lesson-remote-info.yaml
Common Programming Concepts/Tuples and Arrays/: lesson-info.yaml  lesson-remote-info.yaml
Common Programming Concepts/Variables/: lesson-info.yaml  lesson-remote-info.yaml
Common Programming Concepts/Variables, Functions and If Test/: lesson-info.yaml  lesson-remote-info.yaml
Common Programming Concepts/Variables, Functions, and Conditions Test/: lesson-info.yaml  lesson-remote-info.yaml
Concurrency/: section-info.yaml
Concurrency/Shared-State Concurrency/: lesson-info.yaml  lesson-remote-info.yaml
Concurrency/Threads/: lesson-remote-info.yaml
Data Types/: section-info.yaml  section-remote-info.yaml
Data Types/Compound Types/: task-info.yaml
Data Types/Enums and Pattern Matching/: lesson-info.yaml
Data Types/Primitive Types/: lesson-info.yaml  lesson-remote-info.yaml
Data Types/Primitive Types 1/: Cargo.toml  task.md
Data Types/Primitive Types 3/: task-info.yaml
Data Types/Primitive Types 5/: task.md
Data Types/Scalar Types/: Cargo.toml  task.md
Data Types/Structs/: lesson-remote-info.yaml
Enums/: section-info.yaml
Enums/Enums and Pattern Matching/: lesson-info.yaml
Error Handling/: lesson-info.yaml  section-info.yaml  section-remote-info.yaml
Error Handling/Error Handling/: lesson-info.yaml  lesson-remote-info.yaml
Error Handling/Errors 2/: task-info.yaml
Error Handling/Errors 3/: task-info.yaml  task.md
Error Handling/Errors Everywhere/: lesson-info.yaml
Error Handling/Errors Primer/: lesson-info.yaml  lesson-remote-info.yaml
Error Handling/Errors n/: task.md
Error Handling/Option 1/: Cargo.toml  task.md
Fearless Concurrency/: section-info.yaml  section-remote-info.yaml
Fearless Concurrency/Intro/: lesson-info.yaml
Fearless Concurrency/Shared-State Concurrency/: lesson-info.yaml  lesson-remote-info.yaml
Functions/: lesson-info.yaml
Functions/Functions 1/: task.md  (+1 more)
Generic Types, Traits and Lifetime/: section-info.yaml
Generic Types, Traits, and Lifetime/: section-info.yaml  section-remote-info.yaml
Guessing Game/: section-info.yaml
If/: lesson-info.yaml
Introduction/: section-info.yaml  section-remote-info.yaml
Iterators & Closures/: section-info.yaml
Iterators and Closures/: section-remote-info.yaml
Macros/: lesson-info.yaml  section-info.yaml  section-remote-info.yaml
Modules/: lesson-info.yaml  section-info.yaml  section-remote-info.yaml
Modules & Macros/: section-info.yaml
Modules and Macros/: section-info.yaml  section-remote-info.yaml
Move Semantics/: lesson-info.yaml
Primitive Types/: lesson-info.yaml
Programming a Guessing Game/: lesson-info.yaml
Recoverable & Unrecoverable Errors/: section-info.yaml
Recoverable and Unrecoverable Errors/: section-remote-info.yaml
Standard Library Types/: lesson-info.yaml  section-info.yaml  section-remote-info.yaml
Structs/: section-info.yaml
Structs, Methods, Enums, and Pattern Matching/: section-info.yaml  section-remote-info.yaml
Test 1/: lesson-info.yaml
Tests/: lesson-info.yaml
Threads/: lesson-info.yaml
Type Conversions/: section-info.yaml  section-remote-info.yaml
Understanding Ownership/: section-info.yaml  section-remote-info.yaml
Variables/: lesson-info.yaml
Vectors, Hashmaps, and Strings/: section-info.yaml
Writing Automated Tests/: section-info.yaml  section-remote-info.yaml
(+2748 files in other folders)
