[workspace]

members = [
    "Introduction/Getting started/*/",
    "Common Programming Concepts/Variables/*/",
    "Common Programming Concepts/Data Types/*/",
    "Common Programming Concepts/Functions/*/",
    "Common Programming Concepts/Variables, Functions and If Test/*/",
    "Common Programming Concepts/If/*/",
    "Generic Types, Traits and Lifetime/Generic Types, Traits and Lifetime/*/",
    "Writing Automated Tests/Tests/*/",
    "Writing Automated Tests/Tests Test/*/",
    "Common Collections/Strings/*/",
    "Common Collections/String Test/*/",
    "Structs/Structs/*/",
    "Enums/Enums and Pattern Matching/*/",
    "Modules and Macros/Modules/*/",
    "Modules and Macros/Macros/*/",
    "Modules and Macros/Modules and Macros Test/*/",
    "Understanding Ownership/Move Semantics/*/",
    "Type Conversions/Type Conversions/*/",
    "Recoverable and Unrecoverable Errors/Error Handling/*/",
    "Fearless Concurrency/Threads/*/",
    "Iterators and Closures/Standard Library Types/*/"
]

exclude = [
    "**/*.yaml"
]
