[workspace]

members = [
    "Introduction/Getting started/*/",
    "Common Programming Concepts/Variables/*/",
    "Common Programming Concepts/Basic Data Types/*/",
    "Common Programming Concepts/Functions/*/",
    "Common Programming Concepts/Variables, Functions, and Conditions Test/*/",
    "Common Programming Concepts/Conditions/*/",
    "Common Programming Concepts/Repetitions/*/",
    "Common Programming Concepts/Tuples and Arrays/*/",
    "Understanding Ownership/What is ownership/*/",
    "Understanding Ownership/References and Borrowing/*/",
    "Understanding Ownership/The Slice Type/*/",
    "Data Types/Structs/*/",
    "Data Types/Structs with Methods/*/",
    "Data Types/Enums and Pattern Matching/*/",
    "Modules/Modules/*/",
    "Vectors, Hashmaps, and Strings/Vectors and Hashmaps/*/",
    "Vectors, Hashmaps, and Strings/Strings/*/",
    "Vectors, Hashmaps, and Strings/String Test/*/",
    "Error Handling/Error Handling/*/",
    "Generic Types, Traits, and Lifetime/Generic Types, Traits, and Lifetime/*/",
    "Writing Automated Tests/Tests/*/",
    "Writing Automated Tests/Tests Test/*/",
    "Standard Library Types/Iterators and Closures/*/",
    "Standard Library Types/Smart Pointers/*/",
    "Standard Library Types/Type Conversions/*/",
    "Concurrency/Threads/*/",
    "Concurrency/Shared-State Concurrency/*/",
    "Macros/Macros/*/",
    "Macros/Macros Test/*/",
]

exclude = [
    "**/*.yaml"
]
